--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=Backend
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://127.0.0.1:3309/skillsharing
 spring.datasource.username=root
-spring.datasource.password=Niwa123
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.show-sql=true
