--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,5 +1,9 @@
+# Server Configuration
+server.port=8080
+
+# Database Configuration
 spring.application.name=Backend
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update 
 spring.datasource.url=jdbc:mysql://localhost:3306/skillsharing
 spring.datasource.username=root
 spring.datasource.password=root
@@ -8,5 +12,25 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# OAuth2 Configuration
+# Get these from Google Cloud Console: https://console.cloud.google.com/
+# Create OAuth 2.0 Client ID and add these URIs:
+# - Authorized JavaScript origins: http://localhost:3000
+# - Authorized redirect URIs: http://localhost:8080/login/oauth2/code/google
+spring.security.oauth2.client.registration.google.client-id=683038349801-a8qpk00itg5sb84c71h8vocs55m4l1lc.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.scope=email,profile
+
+# Get these from Facebook Developers: https://developers.facebook.com/
+# Create an app and add this OAuth redirect URI:
+# - http://localhost:8080/login/oauth2/code/facebook
+spring.security.oauth2.client.registration.facebook.client-id=1401376037718645
+spring.security.oauth2.client.registration.facebook.client-secret=808dfe8c74ccd7aae67850f9aa678ab4
+spring.security.oauth2.client.registration.facebook.scope=email,public_profile
+
+# JWT Configuration
+jwt.secret=skillshareApp
+jwt.expiration=86400000
 
 
