--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=Backend
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://127.0.0.1:3309/skillsharing
+spring.datasource.url=jdbc:mysql://localhost:3306/skillsharing
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=Niwa123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.show-sql=true
