--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -30,15 +30,19 @@ jwt.expiration=86400000
 
 # JPA/Hibernate Properties
 
-# File Upload Properties
+# File upload settings
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.file-size-threshold=2KB
-spring.servlet.multipart.max-file-size=20MB
-spring.servlet.multipart.max-request-size=25MB
-file.upload-dir=./uploads
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
 
 # For Stack Trace in Error Response
 server.error.include-stacktrace=never
+
+# OAuth2 Configuration
+spring.security.oauth2.client.registration.google.client-id=683038349801-a8qpk00itg5sb84c71h8vocs55m4l1lc.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.scope=email,profile
 
 
 
