--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -3,10 +3,8 @@ server.port=8080
 
 # Database Configuration
 spring.application.name=Backend
-
-spring.jpa.hibernate.ddl-auto=update 
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/skillsharing
-
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -15,7 +13,14 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-
+# OAuth2 Configuration
+# Get these from Google Cloud Console: https://console.cloud.google.com/
+# Create OAuth 2.0 Client ID and add these URIs:
+# - Authorized JavaScript origins: http://localhost:3000
+# - Authorized redirect URIs: http://localhost:8080/login/oauth2/code/google
+spring.security.oauth2.client.registration.google.client-id=683038349801-a8qpk00itg5sb84c71h8vocs55m4l1lc.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.scope=email,profile
 
 # Get these from Facebook Developers: https://developers.facebook.com/
 # Create an app and add this OAuth redirect URI:
@@ -39,10 +44,6 @@ spring.servlet.multipart.max-request-size=10MB
 # For Stack Trace in Error Response
 server.error.include-stacktrace=never
 
-# OAuth2 Configuration
-spring.security.oauth2.client.registration.google.client-id=683038349801-a8qpk00itg5sb84c71h8vocs55m4l1lc.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=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
-spring.security.oauth2.client.registration.google.scope=email,profile
 
 
 
