--- a/client/package.json
+++ b/client/package.json
@@ -3,19 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.2.0",
+    "@testing-library/dom": "^9.3.3",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.9.0",
-    "bootstrap": "^5.3.5",
-    "core-js-pure": "^3.41.0",
-    "date-fns": "^4.1.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-router": "^7.5.2",
-    "react-router-dom": "^6.30.0",
-    "react-scripts": "^5.0.1",
+    "axios": "^1.6.2",
+    "bootstrap": "^5.3.2",
+    "core-js-pure": "^3.33.3",
+    "date-fns": "^2.30.0",
+    "framer-motion": "^12.10.0",
+    "lucide-react": "^0.507.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
+    "react-router-dom": "^6.20.1",
+    "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
