--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=Backend
 spring.jpa.hibernate.ddl-auto=update
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3309/skillsharing
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3309/skillsharing
 
 spring.datasource.url=jdbc:mysql://localhost:3306/skillsharing
 
@@ -10,7 +10,7 @@ spring.datasource.username=root
 
 spring.datasource.password=Root@1234
 
-spring.datasource.password=Niwa123
+#spring.datasource.password=Niwa123
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
