--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,17 +1,8 @@
 spring.application.name=Backend
 spring.jpa.hibernate.ddl-auto=update
-
 spring.datasource.url=jdbc:mysql://127.0.0.1:3309/skillsharing
-
-spring.datasource.url=jdbc:mysql://localhost:3306/skillsharing
-
-
 spring.datasource.username=root
-
-spring.datasource.password=Root@1234
-
-spring.datasource.password=Niwa123
-
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.show-sql=true
@@ -34,3 +25,9 @@ server.error.include-stacktrace=never
 spring.security.oauth2.client.registration.google.client-id=your-client-id
 spring.security.oauth2.client.registration.google.client-secret=your-client-secret
 spring.security.oauth2.client.registration.google.scope=profile,email
+
+
+
+
+
+spring.web.resources.static-locations=classpath:/static/,file:./uploads/
