--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=Backend
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://127.0.0.1:3309/skillsharing
+spring.datasource.url=jdbc:mysql://localhost:3306/skillsharing
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -22,9 +22,17 @@ file.upload-dir=./uploads
 server.error.include-stacktrace=never
 
 
-spring.security.oauth2.client.registration.google.client-id=your-client-id
-spring.security.oauth2.client.registration.google.client-secret=your-client-secret
-spring.security.oauth2.client.registration.google.scope=profile,email
+spring.security.oauth2.client.registration.google.client-id=683038349801-a8qpk00itg5sb84c71h8vocs55m4l1lc.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.scope=email,profile
+
+spring.security.oauth2.client.registration.facebook.client-id=1401376037718645
+spring.security.oauth2.client.registration.facebook.client-secret=808dfe8c74ccd7aae67850f9aa678ab4
+spring.security.oauth2.client.registration.facebook.scope=email,public_profile
+
+# JWT Configuration
+jwt.secret=2s5v8y/B?E(H+MbQeThWmZq3t6w9z$C&F)J@NcRfUjXn2r5u8x/A%D*G-KaPdSgV
+jwt.expiration=86400000
 
 
 spring.web.resources.static-locations=classpath:/static/,file:./uploads/
