--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/skillsharing
 spring.datasource.username=root
 
-spring.datasource.password=root
+spring.datasource.password=Root@1234
 
-spring.datasource.password=Niwa123
+#spring.datasource.password=Niwa123
 
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
