--- a/client/package.json
+++ b/client/package.json
@@ -46,5 +46,6 @@
   },
   "devDependencies": {
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.16"
-  }
+  },
+  "proxy": "http://localhost:8080"
 }
