did some changes

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.username=root
 
 spring.datasource.password=root
 
-
+#spring.datasource.password=Niwa123
 
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
